# reto_virgin_mobile

./: .env.example  .gitignore  Makefile  README.md  descarga.py  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: carga.yaml  test.yaml
config/: envpaths.yaml  load_config.py  logging_utils.py
config/llm_config/: llm_models.py
config/schema_pipeline/: pipeline_schema.py
config/sql/: schema.sql
data/bronze_data/: api_json.json
data/gold_data/csv/: agg_campaign_performance.csv  campaign.csv  campaign_performance_full.csv  holidays.csv
data/validaciones/: campaign.csv  clients.csv  messages.csv
notebooks/: EDA_e_commerce.ipynb
pipelines/carga/csv/: agg_campaign_table_csv.yaml  (+4 more)
pipelines/limpieza/: messages_cleared.yaml  raw_api_data.yaml  raw_campaigns.yaml  raw_client_file.yaml  raw_holidays.yaml  raw_messages.yaml
pipelines/transformacion/: campaign_performance.yaml  campaign_performance_full.yaml  enriched_campaigns.yaml  enriched_clients.yaml  enriched_holidays.yaml  enriched_mesages.yaml
pipelines/validaciones/: validacion_campaign_gold.yaml  validacion_clients_gold.yaml  validacion_messages_gold.yaml
scripts/: carga_tablas_pesadas.sh  limpieza_messages.sh
src/modulos/: API_Module.py  CSV_Module.py  DB_Module.py  Data_quality_Module.py  LLM_Module.py  Parquet_Module.py  Transform_Module.py  Utility_Module.py
src/pipeline_engine/: NodesEngine.py  NodesRegistry.py  PipelineEngine.py  pipeline_loader.py
test/: test_API_Module.py  test_CSV_Module.py  test_Parquet_Module.py  test_Transform_Module.py  test_Utility_Module.py
(+10 files in other folders)
